@@ -1,5 +1,5 @@
-#ifndef MERKAARTOR_ROADMANIPULATIONS_H_
-#define MERKAARTOR_ROADMANIPULATIONS_H_
+#ifndef MERKAARTOR_FEATUREMANIPULATIONS_H_
+#define MERKAARTOR_FEATUREMANIPULATIONS_H_
 
 class CommandList;
 class MapDocument;
@@ -15,9 +15,11 @@ void breakRoads(MapDocument* theDocument, CommandList* theList, PropertiesDock* 
 void reversePoints(MapDocument* theDocument, CommandList* theList, Road* R);
 void alignNodes(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void mergeNodes(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
+void detachNode(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void commitFeatures(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 bool canJoinRoads(PropertiesDock* theDock);
 bool canBreakRoads(PropertiesDock* theDock);
+bool canDetachNodes(PropertiesDock* theDock);
 void addRelationMember(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 void removeRelationMember(MapDocument* theDocument, CommandList* theList, PropertiesDock* theDock);
 
